[gd_scene load_steps=6 format=3 uid="uid://df0vlipkpnhba"]

[ext_resource type="Script" path="res://HUD.gd" id="1_u334t"]
[ext_resource type="FontFile" uid="uid://cbppueh4wgsaw" path="res://Assets/fonts/Xolonium-Regular.ttf" id="2_kgxxg"]
[ext_resource type="Script" path="res://SettingsButton.gd" id="3_bsuvb"]

[sub_resource type="InputEventAction" id="InputEventAction_7cmq7"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_4yhx3"]
events = [SubResource("InputEventAction_7cmq7")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_u334t")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 152.0
offset_top = 16.0
offset_right = 197.0
offset_bottom = 94.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kgxxg")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -6.0
offset_right = 240.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kgxxg")
theme_override_font_sizes/font_size = 64
text = "Dodge The Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -123.0
offset_right = 100.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_kgxxg")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_4yhx3")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SettingsButton" type="Button" parent="."]
offset_left = 48.0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 96.0
script = ExtResource("3_bsuvb")

[node name="SettingsPanel" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 152.0
offset_top = 32.0
offset_right = 288.0
offset_bottom = 144.0

[node name="AudioButton" type="Button" parent="SettingsPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="VideoButton" type="Button" parent="SettingsPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
